--- a/index.html
+++ b/index.html
@@ -1,10 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Gllacy</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-	
+<body class="cream chocolate berry">
+	<header class="main-header">
+		<h1 class="visuallyhidden">онлайн магазин мороженного - Gllacy</h1>
+		<img src="" alt="">
+		<nav class="main-header">
+			<ul class="main-list">
+				<li class="main-list-item"><a href="#">Каталог</a>
+					<ul class="catalog-list">
+						<li class="catalog-list-item news"><a href="#">Новинки</a></li>
+						<li class="catalog-list-item">Сливочное<a href="#"></a></li>
+						<li class="catalog-list-item">Щербеты<a href="#"></a></li>
+						<li class="catalog-list-item">Фруктовый лед<a href="#"></a></li>
+						<li class="catalog-list-item">Мелорин<a href="#"></a></li>
+					</ul>
+				</li>
+				<li class="main-list-item"><a href="#">Доставка и оплата</a></li>
+				<li class="main-list-item"><a href="#">О компании</a></li>
+			</ul>
+			<form class="user-panel" method="get">
+            <input type="search" name="search" id="search" placeholder="Что ищем?">
+            <label class="search-label" for="search"></label>
+          </form>
+          <a href="#" class="input">Вход</a>
+          <a href="#" class="basket">Пусто</a>
+		</nav>
+		<div class="info-job">
+			<p class="mode">c 10 до 20, ежедневно</p>
+			<p class="phone">8 812 450 25 25</p>
+		</div>
+	</header>
+	<main>
+		<div class="slider">
+			<span class="btn1"></span>
+			<span class="btn2"></span>
+			<span class="btn3"></span>
+			<div class="slider-icecream1">
+				<h2 class="slider-tittle">Крем-брюле и пломбир с малиновым джемом</h2>
+				<a href="" class="btn-all">Давайте оба!</a>
+			</div>
+			<div class="slider-icecream2">
+				<h2 class="slider-tittle">Шоколадный пломбир и лимонный сорбет</h2>
+				<a href="" class="btn-all">Давайте оба!</a>
+			</div>
+			<div class="slider-icecream3">
+				<h2 class="slider-tittle">Пломбир с помадкой и клубничный щербет </h2>
+				<a href="" class="btn-all">Давайте оба!</a>
+			</div>
+		</div>
+		<div class="marketing">
+			<section class="marketingone">
+				<h2>Малинка даром!</h2>
+				<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+				<a class="wantone">Хочу варенье!</a>
+			</section>
+			<section class="marketingtwo">
+				<h2>Шоколадки даром!</h2>
+				<p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+				<a class="wanttwo">Хочу шоколадки!</a>
+			</section>
+		</div>
+		<div class="top">
+			<div class="hit hit1">
+				<span>310₽/кг</span>
+				<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+			</div>
+			<div class="hit hit2">
+				<span>380₽/кг</span>
+				<p>Сливочно-кофейнок с кусочками шоколада</p>
+			</div>
+			<div class="hit hit3">
+				<span>355₽/кг</span>
+				<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+			</div>
+			<div class="hit hit4">
+				<span>415₽/кг</span>
+				<p>Сливочноее крем-брюле с карамельной подливкой</p>
+			</div>
+		</div>
+		<div class="infoshop">
+			<h2>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+			<p class="shoptext">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+			<p class="shoptext">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+			<p class="shoptext">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+			<p class="shoptext">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+		</div>
+		<div class="news">
+			<h2>Новое в нашем блоге</h2>
+			<h3>10 способов сервировки фруктовых щербетов к столу</h3>
+		</div>
+		<div class="distribution">
+			<h2 class="visuallyhidden"></h2>
+			<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+			<form class="distribution-email">
+			<input type="text" placeholder="Электронная почта">
+			<button class="btn-email" type="submit">Отправить</button>
+			</form>
+		</div>
+		<div class="wrapper-map">
+                <object
+                type="image/svg+xml"
+                data="img/map.svg">
+                <img
+                  src="img/map.png" alt="map">
+              </object>
+              <section class="contacts">
+                <h2>Адрес главного офиса и офлайн -магазина:</h2>
+                <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+                  <p>Для заказов по телефону: 8 (812) 275-75-75 (с 10 до 20 ежедневно)</p>
+                  <a  class="link-connect" href="">Форма обратной связи</a>
+              </section>
+            </div>
+            <footer>
+            	<div class="social">
+            	<a class="social-btn twit" href="http://twitter.com/mygroup">twitter</a>
+                <a class="social-btn vk" href="http://vk.com/mygroup">vk</a>
+                <a class="social-btn fb" href="http://facebook.com/mygroup">facebook</a>
+                <a class="social-btn inst" href="http://instagram.com/mygroup">instagram</a>
+              </div>
+              <div class="info-footer">
+              	<a href="#">Для поставщиков</a>
+              	<a href="#">Наши документы</a>
+              	<a href="#">О производстве</a>
+              	<a href="#">Экологические стандарты</a>
+              </div>
+              <div class="logo"><img src="" alt=""></div>
+            </footer>
+	</main>
 </body>
 </html>
