--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<img src="" alt="">
 		<nav class="main-header">
 			<ul class="main-list">
-				<li class="main-list-item"><a href="#">Каталог</a>
+				<li class="main-list-item"><a href="catalog.html">Каталог</a>
 					<ul class="catalog-list">
 						<li class="catalog-list-item news"><a href="#">Новинки</a></li>
 						<li class="catalog-list-item">Сливочное<a href="#"></a></li>
@@ -131,6 +131,17 @@
               </div>
               <div class="logo"><img src="" alt=""></div>
             </footer>
+            <div class="modal-login">
+            <button class="close-login" type="button"></button>
+            <h2 class="visuallyhidden">Личный кабинет</h2>
+            <form action="#" method="post">
+              <input class="focus" name="login" type="text" placeholder="Электронная почта">
+              <input name="password" type="password" placeholder="Пароль">  
+              <button type="submit">Войти</button>
+              <a href="#" class="nosave">Забыли пароль?</a>
+              <a href="#" class="new-user">Новая регистрация</a>
+            </form>
+          </div>
 	</main>
 </body>
 </html>
