Добавляет картинки из макета

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 			</div>
 		</div>
 		<div class="marketing">
-			<section class="marketingone">
+			<section class="marketing1">
 				<h2>Малинка даром!</h2>
 				<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
 				<a class="wantone">Хочу варенье!</a>
 			</section>
-			<section class="marketingtwo">
+			<section class="marketing2">
 				<h2>Шоколадки даром!</h2>
 				<p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
 				<a class="wanttwo">Хочу шоколадки!</a>
