--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Gllacy</title>
+	<meta name="description" content="Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body class="cream chocolate berry">
 	<header class="main-header">
-		<h1 class="visuallyhidden">онлайн магазин мороженного - Gllacy</h1>
-		<img src="" alt="">
+		<h1 class="visuallyhidden">Онлайн магазин мороженного - Gllacy</h1>
+		<a href="#" class="logo-shop">
+		<img src="img/Logo.svg" width="157px" height="66px" alt="logo-shop"></a>
 		<nav class="main-header">
 			<ul class="main-list">
 				<li class="main-list-item"><a href="catalog.html">Каталог</a>
 					<ul class="catalog-list">
 						<li class="catalog-list-item news"><a href="#">Новинки</a></li>
-						<li class="catalog-list-item">Сливочное<a href="#"></a></li>
-						<li class="catalog-list-item">Щербеты<a href="#"></a></li>
-						<li class="catalog-list-item">Фруктовый лед<a href="#"></a></li>
-						<li class="catalog-list-item">Мелорин<a href="#"></a></li>
+						<li class="catalog-list-item"><a href="#">Сливочное</a></li>
+						<li class="catalog-list-item"><a href="#">Щербеты</a></li>
+						<li class="catalog-list-item"><a href="#">Фруктовый лед</a></li>
+						<li class="catalog-list-item"><a href="#">Мелорин</a></li>
 					</ul>
 				</li>
 				<li class="main-list-item"><a href="#">Доставка и оплата</a></li>
