--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Gllacy</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body class="cream chocolate berry">
 	<header class="main-header">
 		<h1 class="visuallyhidden">онлайн магазин мороженного - Gllacy(каталог)</h1>
-		<img src="" alt="">
+		<a href="index.html" class="logo-shop">
+		<img src="img/Logo.svg" width="157px" height="66px" alt="logo-shop"></a>
 		<nav class="main-header">
 			<ul class="main-list">
 				<li class="main-list-item catalog-active"><a href="#">Каталог</a>
