--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Gllacy</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body class="cream chocolate berry">
