Добавил главную стилизацию главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -7,11 +7,12 @@
 	<link href="css/normalize.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body class="cream chocolate berry">
+<body>
 	<header class="main-header">
 		<h1 class="visuallyhidden">онлайн магазин мороженного - Gllacy(каталог)</h1>
 		<a href="index.html" class="logo-shop">
 		<img src="img/Logo.svg" width="157px" height="66px" alt="logo-shop"></a>
+		<div class="row">
 		<nav class="main-header">
 			<ul class="main-list">
 				<li class="main-list-item catalog-active"><a href="#">Каталог</a>
@@ -37,6 +38,7 @@
 			<p class="mode">c 10 до 20, ежедневно</p>
 			<p class="phone">8 812 450 25 25</p>
 		</div>
+	</div>
 	</header>
 	<main>
 		<div class="breadcrumbs-list">
@@ -155,7 +157,7 @@
               	<a href="#">О производстве</a>
               	<a href="#">Экологические стандарты</a>
               </div>
-              <div class="logo"><img src="" alt=""></div>
+              <div class="logo"><img src="img/Logo.svg" alt=""></div>
         </footer>
 		<div class="basket-goods">
 				<table class="basket-info">
