Добавляет стилизацию footer

--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
                 <a class="social-btn inst" href="http://instagram.com/mygroup">instagram</a>
               </div>
               <div class="info-footer">
-              	<a href="#">Для поставщиков</a>
+              	<a class="bold" href="#">Для поставщиков</a>
               	<a href="#">Наши документы</a>
               	<a href="#">О производстве</a>
               	<a href="#">Экологические стандарты</a>
               </div>
-              <div class="logo"><img src="img/Logo.svg" alt=""></div>
+              <div class="logo">
+              	<img src="img/Logo.svg" alt="logo-footer" class="logo-footer">
+              </div>
             </footer>
             <div class="modal-login">
             <button class="close-login" type="button"></button>
