Добавляет слилизацию всплывающих окон

--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
 			<p class="phone">8 812 450 25 25</p>
 		</div>
 	</div>
+	<div class="modal-login">
+            <h2 class="visuallyhidden">Личный кабинет</h2>
+            <form class="form-login" action="#" method="post">
+              <input class="focus" name="login" type="text" placeholder="Электронная почта">
+              <input name="password" type="password" placeholder="Пароль">  
+              <button class="inter-login" type="submit">Войти</button>
+            </form>
+            <div class="reg-links">
+            <a href="#" class="nosave">Забыли пароль?</a>
+              <a href="#" class="new-user">Новая регистрация</a>	
+            </div>
+          </div>
 	</header>
 	<main>
 		<div class="slider">
@@ -139,24 +151,29 @@
               	<a href="#">О производстве</a>
               	<a href="#">Экологические стандарты</a>
               </div>
-<<<<<<< HEAD
               <div class="logo">
               	<img src="img/Logo.svg" alt="logo-footer" class="logo-footer">
               </div>
-=======
-              <div class="logo"><img src="img/Logo.svg" alt=""></div>
->>>>>>> 949b9686fe575d900f2186c01112381631cacfad
             </footer>
-            <div class="modal-login">
-            <button class="close-login" type="button"></button>
-            <h2 class="visuallyhidden">Личный кабинет</h2>
-            <form action="#" method="post">
-              <input class="focus" name="login" type="text" placeholder="Электронная почта">
-              <input name="password" type="password" placeholder="Пароль">  
-              <button type="submit">Войти</button>
-              <a href="#" class="nosave">Забыли пароль?</a>
-              <a href="#" class="new-user">Новая регистрация</a>
-            </form>
+          <div class="feedback">
+          	<h2>Мы обязательно вам ответим!</h2>
+            <button class="button-close" type="button"></button>
+        <form class="feedback-form" action="#" method="post">
+          <div class="form-answer">
+            <label>
+              <input type="text" name="login" placeholder="Как вас зовут?">
+            </label>
+            <label>
+              <input type="text" name="email" placeholder="Ваша почта для ответа?"> 
+            </label>
+            <label>
+            <textarea name="textletter" cols="61" rows="6" placeholder="Напишите что-нибудь..."></textarea>
+          </label>
+          </div>
+          <div class="form-btn">
+            <button class="btn" type="submit">Отправить</button>
+          </div> 
+        </form>
           </div>
 	</main>
 </div>
