Добавляет стилизацию фильтра в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -42,8 +42,8 @@
 	</header>
 	<main>
 		<div class="breadcrumbs-list">
-           <a class="breadcrumbs-item" href="index.html">Главная</a>
-           <a class="breadcrumbs-item" href="#">Каталог</a>
+           <a class="breadcrumbs-item" href="index.html">Главная »</a>
+           <a class="breadcrumbs-item" href="#">Каталог »</a>
            <a class="breadcrumbs-item">Сливочное</a>
         </div>
         <div class="creamy-header">
@@ -52,7 +52,7 @@
         <div class="filter">
         	<form action="" method="get" class="form-filter">
         		<div class="sort">
-        		<span>Сортировка</span>
+        		<span>Сортировка:</span>
         		<select name="sort" id="" size="1">
         		    <option selected value="по популярности">по популярности</option>
         		    <option value="сначала недорогие">сначала недорогие</option>
@@ -61,14 +61,15 @@
         		</select>    
         		</div>
         		<fieldset class="filter-item">
-                  <legend>Цена:</legend>
+                  <legend>Цена: 100 руб. - 500 руб.</legend>
                   <div class="range-filter">
                       <div class="range-controls">
                           <div class="scale">
                           <div class="bar"></div>
-                      </div>
-                      <div class="toggle toggle-min"></div>
+                          <div class="toggle toggle-min"></div>
                       <div class="toggle toggle-max"></div>
+                      </div>
+                      
                       </div>
                   </div>
                 </fieldset>
