Добавляет стилизацию страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,29 @@
             <label class="search-label" for="search"></label>
           </form>
           <a href="#" class="input">Вход</a>
+          <div class="basket-contaier">
           <a href="#" class="basket basket-pay">2 товара</a>
+          <div class="basket-goods">
+				<table class="basket-info">
+					<tbody>
+					<tr class="basket-list">
+						<td><button class="basket-close-item" type="submit" value="удалить товар">Удалить товар</button></td>
+						<td><a href="#"><img src="img/goods1.png" class="basket-item-image" width="33" height="33" alt="Пломбир с апельсиновым джемом">Пломбир с апельсиновым джемом</a></td>
+						<td class="basket-item-mass">1,5 кг х <span>200 руб.</span></td>
+                        <td class="basket-item-price">300 руб.</td>
+					</tr>
+					<tr class="basket-list">
+						<td><button class="basket-close-item" type="submit" value="удалить товар">Удалить товар</button></td>
+						<td><a href="#"><img src="img/goods2.png" class="basket-item-image" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">Клубничный пломбир с присыпкой из белого шоколада</a></td>
+						<td class="basket-item-mass">1,5 кг х <span>300 руб.</span></td>
+                        <td class="basket-item-price">450 руб.</td>
+					</tr>
+					</tbody>
+				</table>
+				<p class="basket-total">Итого: 750 руб.</p>
+				<button class="btn-basket-buy" type="submit" value="Оформить заказ">Оформить заказ</button>
+			</div>		
+		</div>
 		</nav>
 		<div class="info-job">
 			<p class="mode">c 10 до 20, ежедневно</p>
@@ -97,55 +119,138 @@
         </div>
         <ul class="creamy-list">
         	<li class="creamy-item1">
-        		<span>310₽/кг</span>
-        		<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+        		<div>
+        			<img src="img/ice1.png" alt="с апельсиновым джемом и цитрусовой стружкой">
+        		</div>
+        		<div class="item-price">
+        		310 ₽
+        		<span class="creamy-price">/кг</span>
+        		</div>
+        		<div class="container-link"><a class="item-heading" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></div>
         	</li>
         	<li class="creamy-item2">
-        		<span>380₽/кг</span>
-        		<p>Сливочно-кофейное с кусочками шоколада</p>
+        		<div>
+        			<img src="img/ice2.png" alt="Сливочно-кофейное с кусочками шоколада">
+        		</div>
+        		<div class="item-price">
+        		380 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочно-кофейное с кусочками шоколада</a>
         	</li>
         	<li class="creamy-item3">
-        		<span>355₽/кг</span>
-        		<p>Слливочно-клубничное с присыпкой из белого шоколада</p>
+        		<div>
+        			<img src="img/ice3.png" alt="Слливочно-клубничное с присыпкой из белого шоколада">
+        		</div>
+        		<div class="item-price">
+        		355 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Слливочно-клубничное с присыпкой из белого шоколада</a>
         	</li>
         	<li class="creamy-item4">
-        		<span>415₽/кг</span>
-        		<p>Сливочное крем-брюле с карамельной подливкой</p>
+        		<div>
+        			<img src="img/ice4.png" alt="Сливочное крем-брюле с карамельной подливкой">
+        		</div>
+        		<div class="item-price">
+        		415 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочное крем-брюле с карамельной подливкой</a>
         	</li>
         	<li class="creamy-item5">
-        		<span>325₽/кг</span>
-        		<p>Сливочное с брусничным джемом</p>
+        		<div>
+        			<img src="img/ice5.png" alt="Сливочное крем-брюле с карамельной подливкой">
+        		</div>
+        		<div class="item-price">
+        		325 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочное с брусничным джемом</a>
         	</li>
         	<li class="creamy-item6">
-        		<span>410₽/кг</span>
-        		<p>Сливочно-черничное с цельными ягодами черники</p>
+        		<div>
+        			<img src="img/ice6.png" alt="Сливочно-черничное с цельными ягодами черники">
+        		</div>
+        		<div class="item-price">
+        		410 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочно-черничное с цельными ягодами черники</a>
         	</li>
         	<li class="creamy-item7">
-        		<span>375₽/кг</span>
-        		<p>Сливочно-лимонное с карамельной присыпкой</p>
+        		<div>
+        			<img src="img/ice7.png" alt="Сливочно-лимонное с карамельной присыпкой<">
+        		</div>
+        		<div class="item-price">
+        		375 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочно-лимонное с карамельной присыпкой</a>
         	</li>
         	<li class="creamy-item8">
-        		<span>320₽/кг</span>
-        		<p>Сливочное с шоколадной стружкой</p>
+        		<div>
+        			<img src="img/ice8.png" alt="Сливочное с шоколадной стружкой<">
+        		</div>
+        		<div class="item-price">
+        		320 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочное с шоколадной стружкой</a>
         	</li>
         	<li class="creamy-item9">
-        		<span>440₽/кг</span>
-        		<p>Сливочно-ванильное с кусочками шоколада</p>
+        		<div>
+        			<img src="img/ice9.png" alt="Сливочно-ванильное с кусочками шоколада<">
+        		</div>
+        		<div class="item-price">
+        		440 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочно-ванильное с кусочками шоколада</a>
         	</li>
         	<li class="creamy-item10">
-        		<span>435₽/кг</span>
-        		<p>Сливочное с ментоловым сиропом</p>
+        		<div>
+        			<img src="img/ice10.png" alt="Сливочное с ментоловым сиропом<">
+        		</div>
+        		<div class="item-price">
+        		435 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочное с ментоловым сиропом</a>
         	</li>
         	<li class="creamy-item11">
-        		<span>355₽/кг</span>
-        		<p>Сливочное с кусочками черного шоколада</p>
+        		<div>
+        			<img src="img/ice11.png" alt="Сливочное с кусочками черного шоколада<">
+        		</div>
+        		<div class="item-price">
+        		355 ₽
+        		<span class="creamy-price">/кг</span>
+        	</div>
+        		<a class="item-heading" href="#">Сливочное с кусочками черного шоколада</a>
         	</li>
         	<li class="creamy-item12">
-        		<span>420₽/кг</span>
-        		<p>Сливочное с мятным сиропом</p>
+        		<div>
+        			<img src="img/ice12.png" alt="Сливочное с мятным сиропом">
+        		</div>
+        		<div class="item-price">
+        		420 ₽
+        		<span class="creamy-price">/кг</span>
+        		</div>
+        		<a class="item-heading" href="#">Сливочное с мятным сиропом</a>
         	</li>
-        </ul>
-    	<footer>
+    </ul>
+     </div> 
+          <ul class="catalog-page-list">
+          	<li><a class="previous" href="#"></a></li>
+            <li><a class="page active-page" href="#">1</a></li>
+            <li><a class="page" href="#">2</a></li>
+            <li><a class="page" href="#">3</a></li>
+            <li><a class="page" href="#">4</a></li>
+            <li><a class="page" href="#">5</a></li>
+            <li><a class="following" href="#"></a></li>
+          </ul>
+        </div>
+   	<footer>
             	<div class="social">
             	<a class="social-btn twit" href="http://twitter.com/mygroup">twitter</a>
                 <a class="social-btn vk" href="http://vk.com/mygroup">vk</a>
@@ -160,26 +265,6 @@
               </div>
               <div class="logo"><img src="img/Logo.svg" alt=""></div>
         </footer>
-		<div class="basket-goods">
-				<table class="basket-info">
-					<tbody>
-					<tr class="basket-list">
-						<td><button class="basket-close-item" type="submit" value="удалить товар">Удалить товар</button></td>
-						<td><a href="#"><img src="" class="baske-item-image" width="33" height="33" alt="Пломбир с апельсиновым джемом"></a></td>
-						<td class="basket-item-mass">1,5 кг х <span>200 руб.</span></td>
-                        <td class="basket-item-price">300 руб.</td>
-					</tr>
-					<tr class="basket-list">
-						<td><button class="basket-close-item" type="submit" value="удалить товар">Удалить товар</button></td>
-						<td><a href="#"><img src="" class="baske-item-image" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада"></a></td>
-						<td class="basket-item-mass">1,5 кг х <span>300 руб.</span></td>
-                        <td class="basket-item-price">450 руб.</td>
-					</tr>
-					</tbody>
-				</table>
-				<p class="basket-total">Итого: 750 руб.</p>
-				<button class="btn-basket-buy" type="submit" value="Оформить заказ">Оформить заказ</button>
-			</div>		
 	</main>
 </body>
 </html>
